--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>React Starter</title>
+	<title>Tracktor - Web Player</title>
 </head>
 <body>
 	<div id="app"></div>
