--- a/index.html
+++ b/index.html
@@ -1,31 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Reactor - Web based DJ software using Soundcloud</title>
-	<meta name="description" content="DJ in your browser using Soundcloud. No software to download or music to pay for, just click and play.">
-	<meta name="keywords" content="DJ,soundcloud,reactor,browser dj">
-	<meta name="author" content="Luke Andersen">
-
-	<meta property="og:image" content="https://lukeandersen.github.io/reactor/thumbnail.jpg" />
-    <meta property="og:title" content="Reactor - Web based DJ software using Soundcloud" />
-    <meta property="og:site" content="https://lukeandersen.github.io/reactor" />
-
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<meta name="mobile-web-app-capable" content="yes">
-
-	<link rel="apple-touch-icon" href="https://lukeandersen.github.io/reactor/apple-touch-icon.png">
-	<link rel="icon" href="https://lukeandersen.github.io/reactor/favicon.ico" />
-</head>
-<body>
-	<div id="app"></div>
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-		ga('create', 'UA-81472458-1', 'auto'); ga('send', 'pageview');
-	</script>
-<script type="text/javascript" src="index_bundle.js"></script></body>
-</html>
+<meta charset="utf-8">
+<title>Redirecting to https://reactor-dj.vercel.app/</title>
+<meta http-equiv="refresh" content="0; URL=https://reactor-dj.vercel.app/">
+<link rel="canonical" href="https://reactor-dj.vercel.app/">
